Mobile formatting issues resolved
Changes we deployed and this fixes the mobile layout issues.

--- a/src/styling/components/Home/Pledge.css
+++ b/src/styling/components/Home/Pledge.css
@@ -11,7 +11,11 @@
     margin-bottom: 10px;
     width: 30%;
     padding-left: 5%;
+    text-align: right;
     margin-right: 40px;
+}
+.pledgeDetails {
+    text-align: left;
 }
 @media only screen and (max-width: 900px) {
     .pledge {
@@ -26,7 +30,7 @@
 @media only screen and (max-width: 500px) {
     .pledge {
         margin: 5%;
-        font-size: 18px;
+        font-size: 20px;
     }
     .pledgeTitle {
         font-size: 33px !important;
