--- a/src/styling/components/Home/Tagline.css
+++ b/src/styling/components/Home/Tagline.css
@@ -7,9 +7,9 @@
 }
 .tagline__title {
     font-size: 90px;
-    margin: 2%;
+    margin: 3%;
     width: 45%;
-    text-align: end;
+    text-align: right;
     font-weight: 1000;
 }
 .tagline__subtitle {
@@ -33,13 +33,21 @@
     }
     .tagline__subtitle { 
         width: 35%;
+        text-align: left;
+        flex-direction: column;
     }
     .tagline__subtitleText1 {
+        width: 70%;
+    }
+    .tagline__subtitleText2 {
         width: 70%;
     }
 }
 @media only screen and (max-width: 900px) {
     .tagline__subtitleText1 {
+        width: 100%;
+    }
+    .tagline__subtitleText2 {
         width: 100%;
     }
 }
