--- a/src/styling/components/Home/WhatsOffered.css
+++ b/src/styling/components/Home/WhatsOffered.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 35%;
+    text-align: left;
 }
 .whatsOffered__detail {
     font-size: 30px;
